# rigged-plinko-lab

./: Cargo.toml  LICENSE  README.md
crates/plinko_cli/: Cargo.toml
crates/plinko_cli/src/: main.rs
crates/plinko_core/: Cargo.toml
crates/plinko_core/src/: board.rs  geometry.rs  lib.rs  physics.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: lib.rs
