[workspace]
resolver = "2"
members = ["crates/sim_core", "crates/plinko_core", "crates/plinko_cli"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/your-name/rigged-plinko-lab"

[workspace.dependencies]
anyhow = "1"
approx = "0.5.1"
rand = "0.10.1"
rand_chacha = "0.10.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
